force-app/main/default/objects/Funding_Action__c/Funding_Action__c.object-meta.xml
<CustomObject>
    <label>Funding Action</label>
    <nameField>
        <label>Funding Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>