force-app/main/default/objects/Funding_Action__c/fields/Acceptance_Required__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Required__c</fullName>
    <label>Acceptance Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>