force-app/main/default/objects/Funding_Action__c/fields/Accounts_Receivable_Manager__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Receivable Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Actions8</relationshipName>
    <type>Lookup</type>
</CustomField>