force-app/main/default/objects/Funding_Action__c/fields/Accounts_Receivable_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Receivable Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>