force-app/main/default/objects/Funding_Action__c/fields/Act_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Act_Agreement__c</fullName>
    <label>Act Agreement</label>
    <summaryFilterItems>
        <field>Funding_Action_Attachment__c.Funding_Type__c</field>
        <operation>equals</operation>
        <value>ACT Funding Action</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Action_Attachment__c.Funding_Action__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>