force-app/main/default/objects/Funding_Action__c/fields/Agreement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Amount__c</fullName>
    <label>Agreement Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>