force-app/main/default/objects/Funding_Action__c/fields/Amendment_Authorized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Authorized_Amount__c</fullName>
    <label>Amendment Authorized Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>