force-app/main/default/objects/Funding_Action__c/fields/Appropriation_Years__c.field-meta.xml
<CustomField>
    <fullName>Appropriation_Years__c</fullName>
    <label>Appropriation Years</label>
    <type>TextArea</type>
</CustomField>