force-app/main/default/objects/Funding_Action__c/fields/B_R_Number__c.field-meta.xml
<CustomField>
    <fullName>B_R_Number__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B&amp;R Number</label>
    <type>Text</type>
</CustomField>