force-app/main/default/objects/Funding_Action__c/fields/Client_Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Client_Action_Description__c</fullName>
    <label>Client Action Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>