force-app/main/default/objects/Funding_Action__c/fields/Client_Property__c.field-meta.xml
<CustomField>
    <fullName>Client_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Property</label>
    <type>Checkbox</type>
</CustomField>