force-app/main/default/objects/Funding_Action__c/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <formula>PNNL_Contract__r.Contract_Client_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Reference #</label>
    <type>Text</type>
</CustomField>