force-app/main/default/objects/Funding_Action__c/fields/Closeout_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Documentation__c</fullName>
    <label>Closeout Documentation</label>
    <summaryFilterItems>
        <field>Funding_Action_Attachment__c.Attachment_Type__c</field>
        <operation>equals</operation>
        <value>Closeout Documentation</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Action_Attachment__c.Funding_Action__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>