force-app/main/default/objects/Funding_Action__c/fields/Contract_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amendment__c</fullName>
    <label>Contract Amendment</label>
    <length>3</length>
    <type>Text</type>
</CustomField>