force-app/main/default/objects/Funding_Action__c/fields/CPS_Number__c.field-meta.xml
<CustomField>
    <fullName>CPS_Number__c</fullName>
    <formula>PNNL_Contract__r.CPS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPS Number</label>
    <type>Text</type>
</CustomField>