force-app/main/default/objects/Funding_Action__c/fields/CRADA__c.field-meta.xml
<CustomField>
    <fullName>CRADA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRADA</label>
    <referenceTo>CRADA__c</referenceTo>
    <relationshipLabel>Funding Actions</relationshipLabel>
    <relationshipName>Funding_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>