force-app/main/default/objects/Funding_Action__c/fields/FAC_Amount2__c.field-meta.xml
<CustomField>
    <fullName>FAC_Amount2__c</fullName>
    <formula>IF(  TEXT(FAC_Waiver__c)  =  NULL,   Agreement_Amount__c  * 0.03, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>