force-app/main/default/objects/Funding_Action__c/fields/FAC_Amount__c.field-meta.xml
<CustomField>
    <fullName>FAC_Amount__c</fullName>
    <label>FAC Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>