force-app/main/default/objects/Funding_Action__c/fields/Fee_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount2__c</fullName>
    <label>Fee Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>