force-app/main/default/objects/Funding_Action__c/fields/Fiscal_YearWA__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_YearWA__c</fullName>
    <formula>TEXT(Work_Authorization__r.Fiscal_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>