force-app/main/default/objects/Funding_Action__c/fields/Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Code__c</fullName>
    <formula>PNNL_Contract__r.Fund_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Code</label>
    <type>Text</type>
</CustomField>