force-app/main/default/objects/Funding_Action__c/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <formula>Proposal__r.Fund_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Type</label>
    <type>Text</type>
</CustomField>