force-app/main/default/objects/Funding_Action__c/fields/Funding_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Agreement_Date__c</fullName>
    <label>Funding Agreement Date</label>
    <type>Date</type>
</CustomField>