force-app/main/default/objects/Funding_Action__c/fields/Funding_Authority__c.field-meta.xml
<CustomField>
    <fullName>Funding_Authority__c</fullName>
    <label>Funding Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atomic Energy Act of 1954 (P.L. 83-703)</fullName>
            </value>
            <value>
                <fullName>Clean Water Act. 33 U.S.C. 1254</fullName>
            </value>
            <value>
                <fullName>Clear Air Act Sec/103 (b) (2)</fullName>
            </value>
            <value>
                <fullName>DHS Act 6 U.S.C. 189</fullName>
            </value>
            <value>
                <fullName>Economy Act 31 U.S.C.1535</fullName>
            </value>
            <value>
                <fullName>Energy Reorganization Act (42 U.S.C. 5845)</fullName>
            </value>
            <value>
                <fullName>Foreign Assistance Act 22 U.S.C.2395 (b)</fullName>
            </value>
            <value>
                <fullName>Meteorological Services 49 U.S.C. 44720 (b)</fullName>
            </value>
            <value>
                <fullName>National Aeronautical and Space Act of 1958 42 U.S.C. 241</fullName>
            </value>
            <value>
                <fullName>National Aeronautical and Space Act of 1958 as amended (&quot;Space Act&quot;) 51 U.S.C. 20113</fullName>
            </value>
            <value>
                <fullName>Outer Continental Shelf 43 U.S.C. 1331 et seq (OCS) Lands Act of 1953 as amended</fullName>
            </value>
            <value>
                <fullName>Public Health and Welfare 42 U.S.C. 241</fullName>
            </value>
            <value>
                <fullName>Public Health Services Act 42 U.S.C. 285a-2(B)(8)</fullName>
            </value>
            <value>
                <fullName>Economy Acr 31 U.S.C.1535</fullName>
                <isActive>false</isActive>
                <label>Economy Acr 31 U.S.C.1535</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>