force-app/main/default/objects/Funding_Action__c/fields/Funding_Document__c.field-meta.xml
<CustomField>
    <fullName>Funding_Document__c</fullName>
    <label>Funding Document</label>
    <summaryFilterItems>
        <field>Funding_Action_Attachment__c.Attachment_Type__c</field>
        <operation>equals</operation>
        <value>Funding Document</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Action_Attachment__c.Funding_Action__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>