force-app/main/default/objects/Funding_Action__c/fields/Funding_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source_Code__c</fullName>
    <label>Funding Source Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>