force-app/main/default/objects/Funding_Action__c/fields/Funds_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Funds_Received_Date__c</fullName>
    <label>Funds Received Date</label>
    <type>Date</type>
</CustomField>