force-app/main/default/objects/Funding_Action__c/fields/G_Invoicing_Link__c.field-meta.xml
<CustomField>
    <fullName>G_Invoicing_Link__c</fullName>
    <label>G-Invoicing Link</label>
    <type>Url</type>
</CustomField>