force-app/main/default/objects/Funding_Action__c/fields/HQ_Approval__c.field-meta.xml
<CustomField>
    <fullName>HQ_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Approval</label>
    <type>Checkbox</type>
</CustomField>