force-app/main/default/objects/Funding_Action__c/fields/Incremental_Funding__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Funding__c</fullName>
    <label>Incremental Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>