force-app/main/default/objects/Funding_Action__c/fields/iPAC_TAS_Code__c.field-meta.xml
<CustomField>
    <fullName>iPAC_TAS_Code__c</fullName>
    <label>iPAC TAS Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>