force-app/main/default/objects/Funding_Action__c/fields/Notify1__c.field-meta.xml
<CustomField>
    <fullName>Notify1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Actions (Notify)</relationshipLabel>
    <relationshipName>Funding_Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>