force-app/main/default/objects/Funding_Action__c/fields/Notify__c.field-meta.xml
<CustomField>
    <fullName>Notify__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Actions</relationshipLabel>
    <relationshipName>Funding_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>