force-app/main/default/objects/Funding_Action__c/fields/Obs_Number__c.field-meta.xml
<CustomField>
    <fullName>Obs_Number__c</fullName>
    <label>Obs Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>