force-app/main/default/objects/Funding_Action__c/fields/ORO_Budget_Approver__c.field-meta.xml
<CustomField>
    <fullName>ORO_Budget_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ORO Budget Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Actions5</relationshipName>
    <type>Lookup</type>
</CustomField>