force-app/main/default/objects/Funding_Action__c/fields/PNNL_Budget_Ceiling_Availability__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Budget_Ceiling_Availability__c</fullName>
    <label>Budget Ceiling Availability</label>
    <summarizedField>PNNL_Funding_Obligation__c.PNNL_Balance__c</summarizedField>
    <summaryForeignKey>PNNL_Funding_Obligation__c.Funding_Action__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>