force-app/main/default/objects/Funding_Action__c/fields/PNNL_Contract__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNNL Contract</label>
    <referenceTo>PNNL_Contracts__c</referenceTo>
    <relationshipLabel>Funding Actions</relationshipLabel>
    <relationshipName>Funding_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>