force-app/main/default/objects/Funding_Action__c/fields/PNNL_Obligation__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Obligation__c</fullName>
    <label>Obligation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>