force-app/main/default/objects/Funding_Action__c/fields/PNNL_Remaining_Agreement__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Remaining_Agreement__c</fullName>
    <formula>Agreement_Amount__c -  PNNL_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Agreement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>