force-app/main/default/objects/Funding_Action__c/fields/PNNL_SC_Approved_Level__c.field-meta.xml
<CustomField>
    <fullName>PNNL_SC_Approved_Level__c</fullName>
    <label>SC Approved Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>