force-app/main/default/objects/Funding_Action__c/fields/PNNL_Sponsor_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Sponsor_Group_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor Group Code</label>
    <referenceTo>Sponsor_Group_Code__c</referenceTo>
    <relationshipLabel>Funding Actions</relationshipLabel>
    <relationshipName>Funding_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>