force-app/main/default/objects/Funding_Action__c/fields/PNNL_SPP_Code__c.field-meta.xml
<CustomField>
    <fullName>PNNL_SPP_Code__c</fullName>
    <label>SPP Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>