force-app/main/default/objects/Funding_Action__c/fields/PNNL_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>PNNL_Funding_Obligation__c.PNNL_Amount__c</summarizedField>
    <summaryForeignKey>PNNL_Funding_Obligation__c.Funding_Action__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>