force-app/main/default/objects/Funding_Action__c/fields/PNSO_Contracting_Officer__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Contracting_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO Contracting Officer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PNSO_Contracting_Office__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Actions4</relationshipName>
    <type>Lookup</type>
</CustomField>