force-app/main/default/objects/Funding_Action__c/fields/PNSO_Program_Admin__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Program_Admin__c</fullName>
    <label>PNSO Program Admin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>