force-app/main/default/objects/Funding_Action__c/fields/PNSO_Program_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Program_Admin_Email__c</fullName>
    <label>PNSO Program Admin Email</label>
    <type>Email</type>
</CustomField>