force-app/main/default/objects/Funding_Action__c/fields/PNSO_Project_Admin__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Project_Admin__c</fullName>
    <label>PNSO Project Admin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>