force-app/main/default/objects/Funding_Action__c/fields/PNSO_Project_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Project_Admin_Email__c</fullName>
    <label>PNSO Project Admin Email</label>
    <type>Email</type>
</CustomField>