force-app/main/default/objects/Funding_Action__c/fields/PNSO_SPP_Office_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>PNSO_SPP_Office_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO SPP Office Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Actions2</relationshipName>
    <type>Lookup</type>
</CustomField>