force-app/main/default/objects/Funding_Action__c/fields/Project_Staff_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Project_Staff_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Staff Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>