force-app/main/default/objects/Funding_Action__c/fields/Proposal_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Amendment__c</fullName>
    <label>Proposal Amendment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>