force-app/main/default/objects/Funding_Action__c/fields/Proposed_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Amendment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Amendment</label>
    <referenceTo>Proposed_Amendment__c</referenceTo>
    <relationshipLabel>Funding Actions</relationshipLabel>
    <relationshipName>Funding_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>