force-app/main/default/objects/Funding_Action__c/fields/Revison__c.field-meta.xml
<CustomField>
    <fullName>Revison__c</fullName>
    <formula>Work_Authorization__r.Revision_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revison</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>