force-app/main/default/objects/Funding_Action__c/fields/SC_Approved_Level_Amount__c.field-meta.xml
<CustomField>
    <fullName>SC_Approved_Level_Amount__c</fullName>
    <formula>PNNL_Sponsor_Group_Code__r.SC_Approved_Level_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Approved Level Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>