force-app/main/default/objects/Funding_Action__c/fields/Sensitive_Project__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitive Project</label>
    <type>Checkbox</type>
</CustomField>