force-app/main/default/objects/Funding_Action__c/fields/Sponsor_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Group_Code__c</fullName>
    <label>Sponsor Group Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>