force-app/main/default/objects/Funding_Action__c/fields/SPP_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>SPP_Billing_Address__c</fullName>
    <label>SPP Billing Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>