force-app/main/default/objects/Funding_Action__c/fields/SPP_Code__c.field-meta.xml
<CustomField>
    <fullName>SPP_Code__c</fullName>
    <formula>PNNL_Contract__r.SPP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPP Code</label>
    <type>Text</type>
</CustomField>