force-app/main/default/objects/Funding_Action__c/fields/SPP_Code_Visibility_Check__c.field-meta.xml
<CustomField>
    <fullName>SPP_Code_Visibility_Check__c</fullName>
    <formula>SPP_Code__c  = null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPP Code Visibility Check</label>
    <type>Checkbox</type>
</CustomField>