force-app/main/default/objects/Funding_Action__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding Received</fullName>
            </value>
            <value>
                <fullName>Funding Preparation</fullName>
            </value>
            <value>
                <fullName>Funding Pending</fullName>
            </value>
            <value>
                <fullName>Funding Approved - Project Active</fullName>
            </value>
            <value>
                <fullName>Closeout</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>