force-app/main/default/objects/Funding_Action__c/fields/TAS_Code__c.field-meta.xml
<CustomField>
    <fullName>TAS_Code__c</fullName>
    <label>TAS Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>