force-app/main/default/objects/Funding_Action__c/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Authorization</label>
    <referenceTo>Funding_Agreement__c</referenceTo>
    <relationshipLabel>Funding Actions</relationshipLabel>
    <relationshipName>Funding_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>