force-app/main/default/objects/Funding_Action__c/recordTypes/ACT_Funding_Action.recordType-meta.xml
<RecordType>
    <fullName>ACT_Funding_Action</fullName>
    <active>true</active>
    <label>ACT Funding Action</label>
</RecordType>