force-app/main/default/objects/Funding_Action__c/recordTypes/DOE_Direct_Funding_Action.recordType-meta.xml
<RecordType>
    <fullName>DOE_Direct_Funding_Action</fullName>
    <active>true</active>
    <label>DOE Direct Funding Action</label>
</RecordType>