force-app/main/default/objects/Funding_Action__c/recordTypes/SPP_Funding_Action.recordType-meta.xml
<RecordType>
    <fullName>SPP_Funding_Action</fullName>
    <active>true</active>
    <label>SPP Funding Action</label>
</RecordType>