force-app/main/default/objects/Funding_Action__c/validationRules/ACT_Agreement_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ACT_Agreement_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;ACT Funding Action&quot;,
Act_Agreement__c  =  0,
ISPICKVAL(Status__c ,&apos;Funding Preparation&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>An ACT Agreement must be attached before moving to Funding Preparation.</errorMessage>
</ValidationRule>